# s3Dgraphy

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  .zenodo.json  CHANGELOG.md  EM_Stratigrafia_Montebelluna_v2.xlsx  GRAPHML_EM_EXPORT_SPEC.md  GRAPHML_EXPORT_README.md  MANIFEST.in  Makefile  README.md  bump_and_push.bat  bump_and_push.sh  complete_setup_script.py  example_stratigraphy.xlsx  pyproject.toml  s3d_publish.bat  s3d_publish.py  s3d_publish.sh  setup_versioning.py  template_em_paradata.xlsx  template_site_properties.xlsx  template_stratigraphy.xlsx  test_excel_to_graphml.py  test_graphml_export.py  test_graphml_patcher.py  test_stratigraphic_classification.py
.github/workflows/: publish.yml  test.yml.disabled  version-bump.yml  zenodo.yml
config/: excel_to_graphml_mapping.json
docs/: AI_EXTRACTION_PROMPT.md  DATA_FORMALIZATIONS.md  GRAPHML_EXPORT.md  conf.py  deprecations.md  index.rst  installation.rst  requirements.txt  s3dgraphy_changelog.rst  s3dgraphy_core_concepts.rst  s3dgraphy_import_export.rst  s3dgraphy_import_export_complete.rst  s3dgraphy_integration_emtools.rst  s3dgraphy_json_config.rst  s3dgraphy_mapping_system.rst  s3dgraphy_quickstart.rst  s3dgraphy_roadmap.rst  s3dgraphy_troubleshooting.rst
docs/_static/: custom.css
docs/api/: classification.rst  core.rst  diagnostics.rst  edges.rst  exporters.rst  importers.rst  nodes.rst  resolvers.rst  s3dgraphy_classes_reference.rst  s3dgraphy_edges_reference.rst  sync.rst  utils.rst
docs/examples/: s3dgraphy_workflow_examples.rst
docs/exporters/: unified_xlsx_exporter.rst
docs/guides/: s3dgraphy_caching_performance.rst  s3dgraphy_operators_guide.rst
docs/importers/: dual_stack_driver_choice.rst  mapping_schema.rst  unified_xlsx_importer.rst
docs/internals/: chronology.rst  classification.rst  merge_patcher.rst  propagation.rst  stratiminer_prompt.rst  temporal.rst  transforms.rst
docs/tutorials/: basic_usage.rst
scripts/: zenodo_publish.py
src/s3dgraphy/: __init__.py  classification.py  diagnostics.py  graph.py  indices.py
src/s3dgraphy/JSON_config/: em.ttl  em_connection_rules.json  em_palette_icons.json  em_qualia_types.json  em_qualia_types_additions.json  em_visual_rules.json  hdto_extension.ttl  new_qualia_template.json  outdated_s3dgraphy.ttl  s3Dgraphy_connections_datamodel.json  s3Dgraphy_connections_datamodel.json.v155.bak  s3Dgraphy_node_datamodel.json
src/s3dgraphy/JSON_example/: complete-json.json  json_heriverse_11_03_25.json
src/s3dgraphy/data/: AI_EXTRACTION_PROMPT_v1.md  AI_EXTRACTION_PROMPT_v2.md  AI_EXTRACTION_PROMPT_v3.md  AI_EXTRACTION_PROMPT_v4.md  StratiMiner_Extraction_Prompt.md
src/s3dgraphy/edges/: __init__.py  connections_loader.py  edge.py
src/s3dgraphy/exporter/: __init__.py  json_exporter.py  rdf_exporter.py  unified_xlsx_exporter.py
src/s3dgraphy/exporter/graphml/: __init__.py  canvas_generator.py  edge_generator.py  epoch_generator.py  graphml_exporter.py  graphml_exporter_flat.py.bak  graphml_patcher.py  group_node_generator.py  node_generator.py  node_registry.py  palette_resources.py  paradata_generator.py  paradata_image_generator.py  paradata_node_generators.py  table_node_generator.py  utils.py
src/s3dgraphy/importer/: base_importer.py  import_graphml.py  mapped_xlsx_importer.py  pyarchinit_importer.py  qualia_importer.py  unified_xlsx_importer.py  xlsx_importer.py
src/s3dgraphy/mappings/: __init__.py  registry.py  template_emdb_mapping.json  template_pyarchinit_mapping.json
src/s3dgraphy/mappings/emdb/: BSL_USM_mapping.json  BSL_USM_mappings.json  BSL_USR_mapping.json  BSL_US_mapping.json  BSL_US_mappings.json  usm_mapping.json  (+4 more)
src/s3dgraphy/merge/: __init__.py  graph_merger.py
src/s3dgraphy/multigraph/: multigraph.py
src/s3dgraphy/nodes/: __init__.py  author_node.py  base_node.py  document_node.py  embargo_node.py  epoch_node.py  group_node.py  hdt_node.py  license_node.py  link_node.py  paradata_node.py  property_node.py  stratigraphic_node.py
src/s3dgraphy/resolvers/: __init__.py  builtin_rules.py  property_resolver.py
src/s3dgraphy/sync/: __init__.py  _workspace.py  edge_registry.py  graph_ingestor.py  graph_projector.py  graphml_writer.py  group_projector.py  paradata_store.py  pyarchinit_pg_importer.py  rapporti.py  yed_import_pipeline.py  yed_rapporti_policy.py  yed_table_parser.py
src/s3dgraphy/templates/: em_data_template.xlsx  em_palette_template.graphml
src/s3dgraphy/temporal/: __init__.py  inference_engine.py
src/s3dgraphy/transforms/: __init__.py  aux_tracking.py  compact.py  materialize_continuity.py
src/s3dgraphy/utils/: __init__.py  utils.py  visual_layout.py
tests/: test_composite_node_name.py  test_filtered_import.py  test_lossless_roundtrip.py  test_pg_importer.py  test_pyarchinit_location_mapping.py
tests/fixtures/postgres/: docker-compose.yml
tests/integration/pyarchinit_roundtrip/: README.md  test_pyarchinit_roundtrip.py
tests/sync/: _uuid_backfill.py  conftest.py  test_ai03_export_byte_identical.py  test_ai03_export_pg_structural.py  test_conflict_resolver.py  test_db_handle_shim.py  test_edge_registry.py  test_edge_registry_locationnodegroup.py  test_export_pg.py  test_graph_ingestor.py  test_graph_projector.py  test_graph_projector_groups.py  test_graph_projector_multilingual.py  test_graph_projector_paradata.py  test_graphml_physical_relationships_d13.py  test_graphml_writer_helpers.py  test_graphml_writer_pipeline.py  test_group_projector.py  test_group_store.py  test_group_store_pg.py  test_group_walker_integration.py  test_groups_export_em_template.py  test_groups_idempotent.py  test_idempotent_ingest.py  test_ingest_pg.py  test_ingest_result.py  test_legacy_autopromote.py  test_locationnodegroup_projection.py  test_locationnodegroup_recursive_ingest.py  test_node_uuid_backfill_pg.py  test_paradata_idempotent.py  test_paradata_store.py  test_paradata_store_pg.py  test_pg_bv2_pg_importer.py  test_pg_smoke.py  test_primary_selection.py  test_rapporti_multilingual_d13.py  test_rapporti_multilingual_relationships.py  test_rapporti_parse_serialize.py  test_rapporti_shorthand_dispatch.py  (+28 more)
(+8 files in other folders)
