[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s3dgraphy"
version = "0.1.0"
description = "3D Stratigraphic Graph Management Library for archaeological and heritage applications"
authors = [
    {name = "Emanuel Demetrescu", email = "emanuel.demetrescu@cnr.it"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.21.0",
]
keywords = ["archaeology", "stratigraphy", "graph", "3d", "heritage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research", 
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/zalmoxes-laran/s3dgraphy"
Documentation = "https://docs.extendedmatrix.org/projects/s3dgraphy/"
Repository = "https://github.com/zalmoxes-laran/s3dgraphy.git"
"Bug Reports" = "https://github.com/zalmoxes-laran/s3dgraphy/issues"
"Extended Matrix" = "https://www.extendedmatrix.org"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov", 
    "black",
    "flake8",
    "mypy",
    "build",
    "twine"
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme",
    "myst-parser"
]
visualization = [
    "networkx>=3.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-target = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
